# patch-idea-zsh

./: Cargo.toml  README.md
src/: ide.rs  main.rs  patch.rs  shell.rs
