[package]
name = "gipo355-patch-idea-zsh"
version = "0.1.0"
authors = ["Gipo 91525512+gipo355@users.noreply.github.com"]
edition = "2021"
description = "Small utility to patch JetBrains IDEA desktop files to use a shell and inherit the environment"
license = "MIT" 
documentation = "https://github.com:gipo355/patch-idea-zsh"
homepage = "https://github.com/gipo355/patch-idea-zsh"
repository = "https://github.com/gipo355/patch-idea-zsh"

[dependencies]
dirs = "4.0"
chrono = "0.4"
which = "4.2"
